// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadType is cargo_item 1`] = `
<div
  class="booking_summary hide-sm hide-xs flex-50 layout-align-sm-center-center layout-row"
>
  <div
    class="route_sec flex-40 layout-column layout-align-stretch"
  >
    <div
      class="flex-none layout-row layout-align-center"
    >
      <div
        class="flex-none connection_graphics"
      >
        <i
          class="fa fa-map-marker map_marker"
        />
        <i
          class="fa fa-flag-o flag"
        />
        <div
          class="mot_wrapper layout-row layout-align-center-center"
        >
          <i
            class="fa fa-anchor  "
          />
        </div>
        <div
          style="margin-top:6px;height:2px;width:100%;background:linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa);background-size:16px 2px, 100% 2px"
        />
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          From
        </h4>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          To
        </h4>
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_ORIGIN_CITY"
          >
            <span />
            <span>
              FOO_ORIGIN_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with pick-up
        </p>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_DESTINATION_CITY"
          >
            <span />
            <span>
              FOO_DESTINATION_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with 
                delivery
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex flex-sm-40 layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Weight
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      100.00 kg
    </p>
  </div>
  <div
    class="flex layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Volume
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      200.000 m³
    </p>
  </div>
</div>
`;

exports[`modeOfTransport is falsy 1`] = `
<div
  class="booking_summary hide-sm hide-xs flex-50 layout-align-sm-center-center layout-row"
>
  <div
    class="route_sec flex-40 layout-column layout-align-stretch"
  >
    <div
      class="flex-none layout-row layout-align-center"
    >
      <div
        class="flex-none connection_graphics"
      >
        <i
          class="fa fa-map-marker map_marker"
        />
        <i
          class="fa fa-flag-o flag"
        />
        <div
          class="mot_wrapper layout-row layout-align-center-center"
        >
           
        </div>
        <div
          style="margin-top:6px;height:2px;width:100%;background:linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa);background-size:16px 2px, 100% 2px"
        />
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          From
        </h4>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          To
        </h4>
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_ORIGIN_CITY"
          >
            <span />
            <span>
              FOO_ORIGIN_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with pick-up
        </p>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_DESTINATION_CITY"
          >
            <span />
            <span>
              FOO_DESTINATION_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with 
                delivery
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex flex-sm-40 layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Weight
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      100.00 kg
    </p>
  </div>
</div>
`;

exports[`render render 1`] = `
<div
  class="booking_summary hide-sm hide-xs flex-50 layout-align-sm-center-center layout-row"
>
  <div
    class="route_sec flex-40 layout-column layout-align-stretch"
  >
    <div
      class="flex-none layout-row layout-align-center"
    >
      <div
        class="flex-none connection_graphics"
      >
        <i
          class="fa fa-map-marker map_marker"
        />
        <i
          class="fa fa-flag-o flag"
        />
        <div
          class="mot_wrapper layout-row layout-align-center-center"
        >
          <i
            class="fa fa-anchor  "
          />
        </div>
        <div
          style="margin-top:6px;height:2px;width:100%;background:linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa);background-size:16px 2px, 100% 2px"
        />
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          From
        </h4>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          To
        </h4>
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_ORIGIN_CITY"
          >
            <span />
            <span>
              FOO_ORIGIN_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with pick-up
        </p>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_DESTINATION_CITY"
          >
            <span />
            <span>
              FOO_DESTINATION_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with 
                delivery
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex flex-sm-40 layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Weight
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      100.00 kg
    </p>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  class="booking_summary hide-sm hide-xs flex-50 layout-align-sm-center-center layout-row"
>
  <div
    class="route_sec flex-40 layout-column layout-align-stretch"
  >
    <div
      class="flex-none layout-row layout-align-center"
    >
      <div
        class="flex-none connection_graphics"
      >
        <i
          class="fa fa-map-marker map_marker"
        />
        <i
          class="fa fa-flag-o flag"
        />
        <div
          class="mot_wrapper layout-row layout-align-center-center"
        >
          <i
            class="fa fa-anchor  "
          />
        </div>
        <div
          style="margin-top:6px;height:2px;width:100%;background:black;background-size:16px 2px, 100% 2px"
        />
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          From
        </h4>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          To
        </h4>
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_ORIGIN_CITY"
          >
            <span />
            <span>
              FOO_ORIGIN_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with pick-up
        </p>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_DESTINATION_CITY"
          >
            <span />
            <span>
              FOO_DESTINATION_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with 
                delivery
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex flex-sm-40 layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Weight
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      100.00 kg
    </p>
  </div>
</div>
`;

exports[`trucking.onCarriage is empty object 1`] = `
<div
  class="booking_summary hide-sm hide-xs flex-50 layout-align-sm-center-center layout-row"
>
  <div
    class="route_sec flex-40 layout-column layout-align-stretch"
  >
    <div
      class="flex-none layout-row layout-align-center"
    >
      <div
        class="flex-none connection_graphics"
      >
        <i
          class="fa fa-map-marker map_marker"
        />
        <i
          class="fa fa-flag-o flag"
        />
        <div
          class="mot_wrapper layout-row layout-align-center-center"
        >
          <i
            class="fa fa-anchor  "
          />
        </div>
        <div
          style="margin-top:6px;height:2px;width:100%;background:linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa);background-size:16px 2px, 100% 2px"
        />
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          From
        </h4>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          To
        </h4>
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_ORIGIN_CITY"
          >
            <span />
            <span>
              FOO_ORIGIN_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with pick-up
        </p>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_NEXUSES_DESTINATION"
          >
            <span />
            <span>
              FOO_NEXUSES_DESTINATION
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          without 
                delivery
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex flex-sm-40 layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Weight
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      100.00 kg
    </p>
  </div>
</div>
`;

exports[`trucking.preCarriage is empty object 1`] = `
<div
  class="booking_summary hide-sm hide-xs flex-50 layout-align-sm-center-center layout-row"
>
  <div
    class="route_sec flex-40 layout-column layout-align-stretch"
  >
    <div
      class="flex-none layout-row layout-align-center"
    >
      <div
        class="flex-none connection_graphics"
      >
        <i
          class="fa fa-map-marker map_marker"
        />
        <i
          class="fa fa-flag-o flag"
        />
        <div
          class="mot_wrapper layout-row layout-align-center-center"
        >
          <i
            class="fa fa-anchor  "
          />
        </div>
        <div
          style="margin-top:6px;height:2px;width:100%;background:linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa);background-size:16px 2px, 100% 2px"
        />
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          From
        </h4>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center"
      >
        <h4>
          To
        </h4>
      </div>
    </div>
    <div
      class="flex-50 layout-row layout-align-space-between"
    >
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_NEXUSES_ORIGIN"
          >
            <span />
            <span>
              FOO_NEXUSES_ORIGIN
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          without pick-up
        </p>
      </div>
      <div
        class="flex-50 layout-row layout-align-center-center layout-wrap header_hub"
      >
        <h4
          class="flex-100"
        >
          <span
            data-tip="FOO_DESTINATION_CITY"
          >
            <span />
            <span>
              FOO_DESTINATION_CITY
            </span>
            <span
              style="position:fixed;visibility:hidden;top:0;left:0"
            >
              …
            </span>
          </span>
        </h4>
        <p
          class="trucking_elem flex-none"
        >
          with 
                delivery
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex flex-sm-40 layout-column layout-align-stretch"
  >
    <h4
      class="flex-50 layout-row layout-align-center-center"
    >
      Total Weight
    </h4>
    <p
      class="flex-50 layout-row layout-align-center-start"
    >
      100.00 kg
    </p>
  </div>
</div>
`;
